--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -8,6 +8,10 @@
     <%= f.text_area :body, class: 'form-control book_body' %>
   </div>
   <div class="form-group">
-    <%= f.submit class: 'btn btn-success' %>
+    <% if controller.controller_name == 'books' && controller.action_name == 'edit' %>
+      <%= f.submit 'Update Book', class: 'btn btn-success' %>
+    <% else %>
+      <%= f.submit 'Create Book', class: 'btn btn-success' %>
+    <% end %>
   </div>
 <% end %>
