--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,7 +2,7 @@
   <div class='row'>
     <div class='col-md-3'>
       <h2>User info</h2>
-      <%= render 'users/info' %>
+      <%= render 'users/info', user: @user %>
       <h2 class="mt-3">New book</h2>
       <%= render 'form', book: @book %>
     </div>
@@ -10,15 +10,17 @@
   		<h2>Book detail</h2>
   		<table class='table'>
   		  <tr>
-          <td><%= link_to(@book.user) do %>
-            <%= image_tag @book.user.get_profile_image, size:"100x100" %><br>
-            <%= @book.user.name %>
+          <td><%= link_to(@selected_book.user) do %>
+            <%= image_tag @selected_book.user.get_profile_image(100, 100) %><br>
+            <%= @selected_book.user.name %>
             <% end %>
           </td>
-          <td><%= link_to @book.title, @book %></td>
-          <td><%= @book.body %></td>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <td><%= link_to @selected_book.title, @selected_book %></td>
+          <td><%= @selected_book.body %></td>
+          <% if @selected_book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@selected_book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @selected_book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <% end %>
         </tr>
       </table>
     </div>
