--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,12 +17,42 @@
           </td>
           <td><%= link_to @selected_book.title, @selected_book %></td>
           <td><%= @selected_book.body %></td>
+          <td>
+            <% if @selected_book.favorited_by?(current_user) %>
+              <%= link_to book_favorites_path(@selected_book), method: :delete, class: "text-danger" do %>
+                ♥<%= @selected_book.favorites.count %>
+              <% end %>
+            <% else %>
+              <%= link_to book_favorites_path(@selected_book), method: :post do %>
+                ♥<%= @selected_book.favorites.count %>
+              <% end %>
+            <% end %>
+          </td>
+          <td>
+            <%= "コメント数：#{@selected_book.book_comments.count}" %>
+          </td>
           <% if @selected_book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@selected_book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @selected_book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
         </tr>
       </table>
+
+      <% @book_comments.each do |book_comment| %>
+
+        <%= image_tag book_comment.user.get_profile_image(100, 100) %>
+        <%= book_comment.comment %>
+        <% if book_comment.user == current_user %>
+          <%= link_to "Destroy", book_book_comment_path(book_comment.id), method: :delete, class: "btn btn-danger" %>
+        <% end %><br>
+        <%= book_comment.user.name %><br>
+      <% end %>
+
+      <%= form_with model: [@selected_book, @book_comment] do |f| %>
+        <%= f.text_area :comment, rows: '5', class: "form-control" %>
+        <%= f.submit "送信", class: "mt-2" %>
+      <% end %>
+
     </div>
   </div>
 </div>
