--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,20 @@
       <tr>
         <td><%= image_tag user.get_profile_image(50, 50) %></td>
         <td><%= user.name %></td>
+        <td><%= "フォロー数:#{user.following_user.count}" %></td>
+        <td><%= "フォロワー数:#{user.follower_user.count}" %></td>
+        
+        <% if current_user == user %>
+          <td></td>
+        <% else %>
+          <% if current_user.following?(user) %>
+            <td><%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete %></td>
+          <% else %>
+            <td><%= link_to 'フォローする', user_relationships_path(user.id), method: :POST %></td>
+          <% end %>
+        
+        <% end %>
+
         <td><%= link_to 'Show', user %></td>
       </tr>
     <% end %>
