--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,10 +8,27 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+    <th>follows</th>
+    <th><%= link_to user.following_user.count, follows_user_path(user.id) %></th>
+  </tr>
+  <tr>
+    <th>followers</th>
+    <th><%= link_to user.follower_user.count, followers_user_path(user.id) %></th>
+  </tr>
 </table>
 
 <div class='row'>
-  <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
-    <i class="fas fa-user-cog"></i>
+  <% if current_user == user %>
+    <%= link_to edit_user_path(user), class: "btn btn-outline-secondary btn-block" do %>
+      <i class="fas fa-user-cog"></i>
+    <% end %>
+  <% else %>
+    <% if current_user.following?(user) %>
+      <%= link_to 'フォロー外す', user_relationships_path(user.id), method: :delete, class: "btn btn-info" %>
+    <% else %>
+      <%= link_to 'フォローする', user_relationships_path(user.id), method: :POST, class: "btn btn-success" %>
+    <% end %>
+    
   <% end %>
 </div>
